--- a/index.html
+++ b/index.html
@@ -527,9 +527,88 @@
                 <h4><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!
                 </h4>
               </div>
-							<input type="text" value="Nombre" class="form-one"/>
-							<input type="text" value="Email" class="form-one"/>
-							<input type="text" value="Teléfono" class="form-one"/> <br />
+              <div class="form-inputs">
+                <input type="text" value="Nombre" class="form-one"/>
+                <input type="text" value="Email" class="form-one"/>
+                <input type="text" value="Teléfono" class="form-one"/>
+              </div>
+              <div class="form-inputs">
+                <div class="select">
+                  <select name="marca-select" class="form-select">
+                    <option selected disabled>Elegí una marca</option>
+                    <option value="Acura">Acura</option>
+                    <option value="AUDI">AUDI</option>
+                    <option value="BMW">BMW</option>
+                    <option value="Cadillac">Cadillac</option>
+                    <option value="Chevrolet">Chevrolet</option>
+                    <option value="Citroën">Citroën</option>
+                    <option value="Dodge">Dodge</option>
+                    <option value="FIAT">FIAT</option>
+                    <option value="Ford">Ford</option>
+                    <option value="Geely">Geely</option>
+                    <option value="GMC">GMC</option>
+                    <option value="Honda">Honda</option>
+                    <option value="Hyundai">Hyundai</option>
+                    <option value="Infiniti">Infiniti</option>
+                    <option value="Jeep">Jeep</option>
+                    <option value="Kia">Kia</option>
+                    <option value="Land Rover">Land Rover</option>
+                    <option value="Lexus">Lexus</option>
+                    <option value="Lincoln">Lincoln</option>
+                    <option value="Mercedes-Benz">Mercedes-Benz</option>
+                    <option value="Mini">Mini</option>
+                    <option value="Mitsubishi">Mitsubishi</option>
+                    <option value="Nissan">Nissan</option>
+                    <option value="Peugeot">Peugeot</option>
+                    <option value="Porsche">Porsche</option>
+                    <option value="Renault">Renault</option>
+                    <option value="Scion">Scion</option>
+                    <option value="Subaru">Subaru</option>
+                    <option value="Toyota">Toyota</option>
+                    <option value="Volkswagen">Volkswagen</option>
+                    <option value="Volvo">Volvo</option>
+                  </select>
+                </div>
+                <input type="text" value="Modelo" class="form-one"/>
+                <div class="select">
+                  <select name="marca-select" class="form-select">
+                    <option selected disabled>Elegí un año</option>
+                    <option value="1989">1989</option>
+                    <option value="1990">1990</option>
+                    <option value="1991">1991</option>
+                    <option value="1992">1992</option>
+                    <option value="1993">1993</option>
+                    <option value="1994">1994</option>
+                    <option value="1995">1995</option>
+                    <option value="1996">1996</option>
+                    <option value="1997">1997</option>
+                    <option value="1998">1998</option>
+                    <option value="1999">1999</option>
+                    <option value="2000">2000</option>
+                    <option value="2001">2001</option>
+                    <option value="2002">2002</option>
+                    <option value="2003">2003</option>
+                    <option value="2004">2004</option>
+                    <option value="2005">2005</option>
+                    <option value="2006">2006</option>
+                    <option value="2007">2007</option>
+                    <option value="2008">2008</option>
+                    <option value="2009">2009</option>
+                    <option value="2010">2010</option>
+                    <option value="2011">2011</option>
+                    <option value="2012">2012</option>
+                    <option value="2013">2013</option>
+                    <option value="2014">2014</option>
+                    <option value="2015">2015</option>
+                    <option value="2016">2016</option>
+                    <option value="2017">2017</option>
+                    <option value="2018">2018</option>
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                  </select>
+                </div>
+              </div>
+              <br />
 							<textarea name="Mensaje" cols="30" rows="10">Mensaje</textarea> <br />
 							<button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
 						</form>
