Minor responsive improvements

--- a/index.html
+++ b/index.html
@@ -522,11 +522,6 @@
 				<div class="col-lg-12 col-md-12 text-center">
 					<div class="from_area text-center">
 						<form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-JnuPyfFhSxp1qj51iCXUryvHPW1N4gyBIHEv4w/exec">
-              <div style="display:none" class="thankyou_message alert alert-success">
-                <!-- You can customize the thankyou message by editing the code below -->
-                <h4><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!
-                </h4>
-              </div>
               <div class="form-inputs">
                 <input type="text" value="Nombre" class="form-one"/>
                 <input type="text" value="Email" class="form-one"/>
@@ -534,7 +529,7 @@
               </div>
               <div class="form-inputs">
                 <div class="select">
-                  <select name="marca-select" class="form-select">
+                  <select name="marca" class="form-select">
                     <option selected disabled>Elegí una marca</option>
                     <option value="Acura">Acura</option>
                     <option value="AUDI">AUDI</option>
@@ -571,7 +566,7 @@
                 </div>
                 <input type="text" value="Modelo" class="form-one"/>
                 <div class="select">
-                  <select name="marca-select" class="form-select">
+                  <select name="año" class="form-select">
                     <option selected disabled>Elegí un año</option>
                     <option value="1989">1989</option>
                     <option value="1990">1990</option>
@@ -611,6 +606,10 @@
               <br />
 							<textarea name="Mensaje" cols="30" rows="10">Mensaje</textarea> <br />
 							<button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
+              <div style="display:none" class="thankyou_message">
+                <!-- You can customize the thankyou message by editing the code below -->
+                <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
+              </div>
 						</form>
 					</div>
 				</div>
