--- a/index.html
+++ b/index.html
@@ -523,13 +523,13 @@
 					<div class="from_area text-center">
 						<form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-JnuPyfFhSxp1qj51iCXUryvHPW1N4gyBIHEv4w/exec">
               <div class="form-inputs">
-                <input type="text" value="Nombre" class="form-one"/>
-                <input type="text" value="Email" class="form-one"/>
-                <input type="text" value="Teléfono" class="form-one"/>
+                <input name="Nombre" type="text" value="Nombre" class="form-one"/>
+                <input name="Email" type="text" value="Email" class="form-one"/>
+                <input name="Teléfono" type="text" value="Teléfono" class="form-one"/>
               </div>
               <div class="form-inputs">
                 <div class="select">
-                  <select name="marca" class="form-select">
+                  <select name="Marca" class="form-select">
                     <option selected disabled>Elegí una marca</option>
                     <option value="Acura">Acura</option>
                     <option value="AUDI">AUDI</option>
@@ -566,7 +566,7 @@
                 </div>
                 <input type="text" value="Modelo" class="form-one"/>
                 <div class="select">
-                  <select name="año" class="form-select">
+                  <select name="Año" class="form-select">
                     <option selected disabled>Elegí un año</option>
                     <option value="1989">1989</option>
                     <option value="1990">1990</option>
