Tweaks on contact form

--- a/mecanica-integral.html
+++ b/mecanica-integral.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+                                                j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T72KNFL');</script>
+  <!-- End Google Tag Manager -->
+
 	<meta charset="UTF-8">
 	<title>Repro Taller - Mecánica integral</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +19,11 @@
 	<link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T72KNFL"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
 	<!-- start preloader -->
 	<div class="preloaderbox"></div>
 	<!-- End preloader -->
@@ -339,9 +352,9 @@
 					<div class="from_area text-center">
             <form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-JnuPyfFhSxp1qj51iCXUryvHPW1N4gyBIHEv4w/exec">
               <div class="form-inputs">
-                <input name="Nombre" type="text" value="Nombre" class="form-one"/>
-                <input name="Email" type="text" value="Email" class="form-one"/>
-                <input name="Teléfono" type="text" value="Teléfono" class="form-one"/>
+                <input name="Nombre" type="text" placeholder="Nombre" class="form-one"/>
+                <input name="Email" type="text" placeholder="Email" class="form-one"/>
+                <input name="Teléfono" type="number" placeholder="Teléfono" class="form-one"/>
               </div>
               <div class="form-inputs">
                 <div class="select">
@@ -380,7 +393,7 @@
                     <option value="Volvo">Volvo</option>
                   </select>
                 </div>
-                <input type="text" value="Modelo" class="form-one"/>
+                <input type="text" placeholder="Modelo" class="form-one"/>
                 <div class="select">
                   <select name="Año" class="form-select">
                     <option selected disabled>Elegí un año</option>
@@ -420,7 +433,7 @@
                 </div>
               </div>
               <br />
-              <textarea name="Mensaje" cols="30" rows="10">Mensaje</textarea> <br />
+              <textarea name="Mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea> <br />
               <button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
               <div style="display:none" class="thankyou_message">
                 <!-- You can customize the thankyou message by editing the code below -->
