Fixed home carousel mobile ui

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 						data-start="1500"
 						data-responsive_offset="on">
             <div class="payments-logos">
-              FORMAS DE PAGO: Efectivo - Crédito/Débito - Mercado Pago
+              <p><b>FORMAS DE PAGO: </b>Efectivo - Crédito/Débito - Mercado Pago</p>
               <div>
                 <img src="./img/payments/visa-logo.png" alt="">
                 <img src="./img/payments/amex-logo.png" alt="">
@@ -207,7 +207,7 @@
 						data-transform_out="opacity:0;s:300;s:300;"
 						data-start="1000"
 						data-responsive_offset="on">
-						<span>Climatización y Service programado par tu auto</span>
+						<span>Climatización y Service programado <br> para tu auto</span>
 				    </div>
 					<div class="tp-caption sfb tp-resizeme slider_p"
 				        data-x="center" data-hoffset="0"
@@ -228,7 +228,7 @@
 						data-start="1500"
 						data-responsive_offset="on">
               <div class="payments-logos">
-                FORMAS DE PAGO: Efectivo - Crédito/Débito - Mercado Pago
+                <p><b>FORMAS DE PAGO: </b>Efectivo - Crédito/Débito - Mercado Pago</p>
                 <div>
                   <img src="./img/payments/visa-logo.png" alt="">
                   <img src="./img/payments/amex-logo.png" alt="">
