--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<meta charset="UTF-8">
   <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951</title>
   <meta name="description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!"/>
-  <link rel="canonical" href="https://www.tallermecanico.com.ar/" />
+  <link rel="canonical" href="https:///repro.com.ar.com.ar/" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951" />
   <meta property="og:description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
-  <meta property="og:url" content="https://www.tallermecanico.com.ar/" />
+  <meta property="og:url" content="https://repro.com.ar.com.ar/" />
   <meta property="og:site_name" content="Taller Mecánico Repro" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
