--- a/climatizacion.html
+++ b/climatizacion.html
@@ -61,7 +61,7 @@
 									<div class="header_column">
 										<div class="column_details column_one">
 											<h2>ATENCIÓN</h2>
-											<p><b>De 9 a 18 hs de lun. a vie.</b></p>
+											<p><b>De 9 a 13hs y de 14 a 18hs. de lun a vie</b></p>
 										</div>
 									</div>
 									<div class="header_column">
@@ -287,10 +287,10 @@
 							<img src="img/home-v1/peugeot-preview.jpg" alt="img01" class="img-responsive" />
 							<div class="caption_details figcaption">
 								<p><b>Peugeot/Citroën</b>Nos especializamos en Peugeot y Citroën...<br />
-								<a href="" class="btn btn-info more">VER MÁS</a></p>
+								<a href="service-peugeot.html" class="btn btn-info more">VER MÁS</a></p>
 							</div>
 							<div class="effect_title">
-								<a href="">Peugeot/Citroën<i class="flaticon-right11"></i></a>
+								<a href="service-peugeot.html">Peugeot/Citroën<i class="flaticon-right11"></i></a>
 							</div>
 						</div>
 					</div>
@@ -300,10 +300,10 @@
 							<img src="img/home-v1/volkswagen-preview.jpg" alt="img01" class="img-responsive" />
 							<div class="caption_details figcaption">
 								<p><b>Volkswagen/Audi</b>Nos especializamos en Volkwagen...<br />
-								<a href="" class="btn btn-info more">VER MÁS</a></p>
+								<a href="service-volkswagen.html" class="btn btn-info more">VER MÁS</a></p>
 							</div>
 							<div class="effect_title">
-								<a href="">Volkswagen/Audi<i class="flaticon-right11"></i></a>
+								<a href="service-volkswagen.html">Volkswagen/Audi<i class="flaticon-right11"></i></a>
 							</div>
 						</div>
 					</div>
