--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 	<!-- header end area -->
 
 	<!-- introduce  slider area -->
+	<div id="contact">
+        <img src="https://d35pk2t3v0rl2w.cloudfront.net/hbrrdozyj/image/upload/v1/whatsapp-logo_tyn8iu.svg" alt="">
+    </div>
 	<section class="rev_slider_wrapper construct-banner-wrapper">
 		<div id="slider1" class="rev_slider"  data-version="5.0">
 			<ul>
@@ -651,6 +654,9 @@
 	<!---footer start area -->
 	<section id="footer_area">
 		<div class="container">
+			<div class="ws">
+				<img src="whatsap.png" alt="">
+			</div>
 			<div class="row">
 				<div class="footer_content clearfix">
 					<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer_spacing">
@@ -784,6 +790,7 @@
 	<script src="js/owl.carousel.js"></script>
 	<!-- my js -->
 	<script src="js/main.js"></script>
+	<script src="extra.js"></script>
 
   <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
 </body>
