Modelo added to form

--- a/mecanica-integral.html
+++ b/mecanica-integral.html
@@ -414,7 +414,7 @@
                     <option value="Volvo">Volvo</option>
                   </select>
                 </div>
-                <input type="text" placeholder="Modelo" class="form-one"/>
+                <input name="Modelo" type="text" placeholder="Modelo" class="form-one"/>
                 <div class="select">
                   <select name="Año" class="form-select">
                     <option selected disabled>Elegí un año</option>
