fixed nav area padding in mainmenu section

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                                         <div class="navbar-collapse collapse">
                                             <!-- Nav menu -->
                                             <ul class="nav navbar-nav mainmenu">
-                                                <li class=""><a href="index.html">INICIO<span class="caret"></span></a>
+                                                <li class="nav-area-fixed"><a href="index.html">INICIO<span class="caret"></span></a>
                                                 </li>
 
-                                                <li><a href="#service_area">SERVICIOS<span class="caret"></span></a>
+                                                <li class="nav-area-fixed"><a href="#service_area">SERVICIOS<span class="caret"></span></a>
                                                     <ul class="dropdown-menu">
                                                         <li><a href="mecanica-integral.html">Mecánica integral</a></li>
                                                         <li><a href="inyeccion-electronica.html">Inyección electrónica</a></li>
@@ -138,13 +138,13 @@
                                                         <li><a href="service-programado.html">Service programado</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="#other_service_area">SERVICIO ESPECIALIZADO<span class="caret"></span></a>
+                                                <li class="nav-area-fixed"><a href="#other_service_area">SERVICIO ESPECIALIZADO<span class="caret"></span></a>
                                                     <ul class="dropdown-menu">
                                                         <li><a href="service-peugeot.html">PEUGEOT/CITRÖEN</a></li>
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="#appointment_area">ENVIANOS TU CONSULTA</a></li>
+                                                <li class="nav-area-fixed"><a href="#appointment_area">ENVIANOS TU CONSULTA</a></li>
                                             </ul>
                                         </div>
                                     </div>
