new section without responsive css

--- a/index.html
+++ b/index.html
@@ -259,23 +259,32 @@
         </div>
     </section>
     <!-- end  slider area -->
-  <!-- llamanos ahora start area -->
+    <!-- llamanos ahora start area -->
     <section id="porque_area">
         <div class="container">
             <!-- porque icon area start -->
             <div class="section_heading text-center">
                 <h2>LLAMANOS AHORA</h2>
+
+
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
                 <button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora">
-                    <a href="tel:1558570913">(011) 15-58570913</a>
-                </button></div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
-                <button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora" style="background-color: #25D366; border-color: #25D366;">
-                    <a href="tel:4932-5951">(011) 4932-5951</a></button>
+                    <img src="img/tel-fijo.svg" style="height: 30px;height: 30px;
+                    padding-right: 9px;
+                    padding-bottom: 4px;" /> <a href="tel:4932-5951">(011)
+                            4932-5951</a></button>
             </div>
-          
-           
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
+                <button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora"
+                    style="background-color: #25D366; border-color: #25D366;">
+                    <a href="tel:1558570913"> <img src="img/tel-mobile.svg" style="height: 30px;height: 30px;
+                        padding-right: 9px;
+                        padding-bottom: 4px;" /> (011) 15-58570913</a>
+                </button></div>
+
+
+
         </div>
     </section>
     <!-- llamanos ahora end area -->
