--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
 
 
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col" id="btn-llamanos-ahora-fijo">
                 <button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora">
                     <img src="img/tel-fijo.svg" style="height: 30px;height: 30px;
                     padding-right: 9px;
                     padding-bottom: 4px;" /> <a href="tel:4932-5951">(011)
                             4932-5951</a></button>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col">
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 text-center button-llamanos-ahora-col" id="btn-llamanos-ahora-celular">
                 <button class="btn btn-primary col-lg-11 fixed-button-llamanos-ahora"
                     style="background-color: #25D366; border-color: #25D366;">
                     <a href="tel:1558570913"> <img src="img/tel-mobile.svg" style="height: 30px;height: 30px;
