Added phones to all websites. Fixes in desktop navbar. Fix in Whatsapp style in all webpages.

--- a/mecanica-integral.html
+++ b/mecanica-integral.html
@@ -10,18 +10,18 @@
   <!-- End Google Tag Manager -->
 
 	<meta charset="UTF-8">
-  <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951</title>
+  <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 1161760576</title>
   <meta name="description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!"/>
   <link rel="canonical" href="https:///repro.com.ar.com.ar/" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951" />
+  <meta property="og:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 1161760576" />
   <meta property="og:description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
   <meta property="og:url" content="https://repro.com.ar.com.ar/" />
   <meta property="og:site_name" content="Taller Mecánico Repro" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
-  <meta name="twitter:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951" />
+  <meta name="twitter:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 1161760576" />
   <meta name="twitter:image" content="http://www.turnos365.com/Images/banner-turnos-0.es.png" />
 
   <link rel="icon" href="img/home-v1/cropped-favicon-32x32.png" sizes="32x32" />
@@ -79,6 +79,7 @@
 											<div class="column_right">
 												<h2>Llamanos ahora</h2>
 												<h3>(011) 4932-5951</h3>
+												<h3> (011) 15-61760576</h3>
 											</div>
 										</div>
 
@@ -533,6 +534,7 @@
 								<div class="input-group">
 									<div class="column_text">
 									<h2>(011) 4932-5951</h2>
+									<h2>(011) 15-61760576</h2>
 									</div>
 								</div>
 							</div>
