--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8">
-    <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951</title>
+    <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 15-61760576</title>
     <meta name="description"
         content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
     <link rel="canonical" href="https:///repro.com.ar.com.ar/" />
     <meta property="og:locale" content="es_ES" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951" />
+    <meta property="og:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 15-61760576" />
     <meta property="og:description"
         content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
     <meta property="og:url" content="https://repro.com.ar.com.ar/" />
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description"
         content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!" />
-    <meta name="twitter:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951" />
+    <meta name="twitter:title" content="Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 15-61760576" />
     <meta name="twitter:image" content="http://www.turnos365.com/Images/banner-turnos-0.es.png" />
 
     <link rel="icon" href="img/home-v1/cropped-favicon-32x32.png" sizes="32x32" />
@@ -94,7 +94,7 @@
                                             <div class="column_right">
                                                 <h2>Llamanos ahora</h2>
                                                 <a href="tel:4932-5951">(011) 4932-5951</a>
-                                                <a href="tel:1558570913">(011) 15-58570913</a>
+                                                <a href="tel:1558570913">(011) 15-61760576</a>
 
                                             </div>
                                         </div>
@@ -135,12 +135,12 @@
                                         </div>
                                         <div class="navbar-collapse collapse">
                                             <!-- Nav menu -->
-                                            <ul class="nav navbar-nav mainmenu">
-                                                <li class="nav-area-fixed"><a href="index.html">INICIO<span
+                                            <ul class="nav navbar-nav mainmenu ">
+                                                <li class="nav-area-fixed index-nav-fix "><a href="index.html">INICIO<span
                                                             class="caret"></span></a>
                                                 </li>
 
-                                                <li class="nav-area-fixed"><a href="#service_area">SERVICIOS<span
+                                                <li class="nav-area-fixed index-nav-fix "><a href="#service_area">SERVICIOS<span
                                                             class="caret"></span></a>
                                                     <ul class="dropdown-menu">
                                                         <li><a href="mecanica-integral.html">Mecánica integral</a></li>
@@ -151,14 +151,14 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-                                                <li class="nav-area-fixed"><a href="#other_service_area">SERVICIO
+                                                <li class="nav-area-fixed index-nav-fix "><a href="#other_service_area">SERVICIO
                                                         ESPECIALIZADO<span class="caret"></span></a>
                                                     <ul class="dropdown-menu">
                                                         <li><a href="service-peugeot.html">PEUGEOT/CITRÖEN</a></li>
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="nav-area-fixed"><a href="#appointment_area">ENVIANOS TU
+                                                <li class="nav-area-fixed index-nav-fix "><a href="#appointment_area">ENVIANOS TU
                                                         CONSULTA</a></li>
                                             </ul>
                                         </div>
@@ -766,6 +766,7 @@
                                 <div class="input-group">
                                     <div class="column_text">
                                         <h2>(011) 4932-5951</h2>
+                                        <h2>(011) 15-61760576</h2>
                                     </div>
                                 </div>
                             </div>
