push view fixes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                             <!-- Nav menu -->
                                             <ul class="nav navbar-nav mainmenu ">
                                                 <li class="nav-area-fixed index-nav-fix "><a
-                                                        href="index.html">INICIO<span class="caret"></span></a>
+                                                        href="index.html">INICIO</a>
                                                 </li>
 
                                                 <li class="nav-area-fixed index-nav-fix "><a
@@ -770,8 +770,8 @@
                             <div>
                                 <div class="input-group">
                                     <div class="column_text">
-                                        <h2>(011) 4932-5951</h2>
-                                        <h2>(011) 15-61760576</h2>
+                                        <a href="tel:4932-5951">(011) 4932-5951</a>
+                                                <a href="tel:1561760576">(011) 15-61760576</a>
                                     </div>
                                 </div>
                             </div>
