--- a/service-volkswagen.html
+++ b/service-volkswagen.html
@@ -78,8 +78,8 @@
 											</div>
 											<div class="column_right">
 												<h2>Llamanos ahora</h2>
-												<h3>(011) 4932-5951</h3>
-												<h3>(011) 15-61760576</h3>
+												<a href="tel:4932-5951">(011) 4932-5951</a>
+                                                <a href="tel:1561760576">(011) 15-61760576</a>
 											</div>
 										</div>
 
@@ -116,7 +116,7 @@
 										<div class="navbar-collapse collapse">
 										<!-- Nav menu -->
 											<ul class="nav navbar-nav mainmenu">
-												<li class=""><a href="index.html">INICIO<span class="caret"></span></a>
+												<li class=""><a href="index.html">INICIO</a>
 												</li>
 
 												<li><a href="#service_area">SERVICIOS<span class="caret"></span></a>
@@ -466,8 +466,8 @@
 							<div>
 								<div class="input-group">
 									<div class="column_text">
-									<h2>(011) 4932-5951</h2>
-									<h3> (011) 15-61760576</h3> 
+										<a href="tel:4932-5951">(011) 4932-5951</a>
+										<a href="tel:1561760576">(011) 15-61760576</a>
 									</div>
 								</div>
 							</div>
