button nav on desktop first attempt

--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="nav-area-fixed index-nav-fix "><a
-                                                        href="#appointment_area">ENVIANOS TU
-                                                        CONSULTA</a></li>
+                                                <li> <button class="btn btn-primary"> <a
+                                                            href="#appointment_area">ENVIANOS TU
+                                                            CONSULTA</a></button></li>
+
                                             </ul>
                                         </div>
                                     </div>
@@ -771,7 +772,7 @@
                                 <div class="input-group">
                                     <div class="column_text">
                                         <a href="tel:4932-5951">(011) 4932-5951</a>
-                                                <a href="tel:1561760576">(011) 15-61760576</a>
+                                        <a href="tel:1561760576">(011) 15-61760576</a>
                                     </div>
                                 </div>
                             </div>
