new button style consulta nav area

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <li> <button class="btn btn-primary"> <a
-                                                            href="#appointment_area">ENVIANOS TU
-                                                            CONSULTA</a></button></li>
+                                                <a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
+                                                            CONSULTA</button></a>
 
                                             </ul>
                                         </div>
