--- a/service-volkswagen.html
+++ b/service-volkswagen.html
@@ -133,8 +133,8 @@
 													<li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
 												  </ul>
 												</li>
-												<li><a href="#appointment_area">ENVIANOS TU CONSULTA</a></li>
-											</ul>
+												<a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
+													CONSULTA</button></a>											</ul>
 										</div>
 									</div>
 								</div>
@@ -189,6 +189,7 @@
 						<div class="col-lg-12 col-md-12">
 							<div class="profession_list">
 								<ul>
+									<li><i class="flaticon-check52"></i><a>Especializados en motores TSI</a></li>
 									<li><i class="flaticon-check52"></i><a>Usamos el scanner específico de la marca</a></li>
 									<li><i class="flaticon-check52"></i><a>Contamos con los manuales de procedimientos de reparaciones de la marca.</a></li>
 									<li><i class="flaticon-check52"></i><a>Repuestos originales</a></li>
