Revert "Agrego estilos nuevos al boton de Enviar consulta"

--- a/climatizacion.html
+++ b/climatizacion.html
@@ -133,8 +133,8 @@
 													<li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
 												  </ul>
 												</li>
-												<a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
-													CONSULTA</button></a>											</ul>
+												<li><a href="#appointment_area">ENVIANOS TU CONSULTA</a></li>
+											</ul>
 										</div>
 									</div>
 								</div>
