--- a/service-peugeot.html
+++ b/service-peugeot.html
@@ -133,8 +133,8 @@
 													<li><a href="https://repro.com.ar/service-volkswagen.html">VOLKSWAGEN</a></li>
 												  </ul>
 												</li>
-												<a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
-													CONSULTA</button></a>											</ul>
+												<li><a href="#appointment_area">ENVIANOS TU CONSULTA</a></li>
+											</ul>
 										</div>
 									</div>
 								</div>
@@ -189,8 +189,6 @@
 						<div class="col-lg-12 col-md-12">
 							<div class="profession_list">
 								<ul>
-									
-									<li><i class="flaticon-check52"></i><a>Especializados en motores THP</a></li>
 									<li><i class="flaticon-check52"></i><a>Usamos el scanner específico de la marca</a></li>
 									<li><i class="flaticon-check52"></i><a>Contamos con los manuales de procedimientos de reparaciones de la marca.</a></li>
 									<li><i class="flaticon-check52"></i><a>Repuestos originales</a></li>
