--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                                         <li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
                                                     </ul>
                                                 </li>
-                                                <a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
+                                                <a href="tel:1561760576" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
                                                             CONSULTA</button></a>
 
                                             </ul>
@@ -582,10 +582,11 @@
         </div>
 
     </div>
+    <!-- MANTENIMIENTO - PEDIDO DEL CLIENTE - COMMENTAR ESTA SECCION -->
     <!-- Testimonialend area -->
 
     <!-- appointment start area -->
-    <section id="appointment_area">
+    <!-- <section id="appointment_area">
         <div class="container">
             <div class="row">
                 <div class="appointment text-center">
@@ -684,15 +685,15 @@
                             <textarea name="Mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea> <br />
                             <button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
                             <div style="display:none" class="thankyou_message">
-                                <!-- You can customize the thankyou message by editing the code below -->
-                                <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
+                                 You can customize the thankyou message by editing the code below -->
+                                <!-- <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> --> 
     <!-- appointment end area -->
 
     <!---footer start area -->
