deprecated gform (contact form)

--- a/service-peugeot.html
+++ b/service-peugeot.html
@@ -296,7 +296,7 @@
 	<!-- Brand icon area end -->
 
 	<!-- appointment start area -->
-	<section id="appointment_area">
+	<!-- <section id="appointment_area">
 		<div class="container">
 			<div class="row">
 				<div class="appointment text-center">
@@ -392,16 +392,16 @@
               <br />
               <textarea name="Mensaje" cols="30" rows="10" placeholder="Mensaje"></textarea> <br />
               <button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
-              <div style="display:none" class="thankyou_message">
+              <div style="display:none" class="thankyou_message"> -->
                 <!-- You can customize the thankyou message by editing the code below -->
-                <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
+                <!-- <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
               </div>
             </form>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- appointment end area -->
 
 	<!---footer start area -->
