--- a/climatizacion.html
+++ b/climatizacion.html
@@ -356,7 +356,7 @@
 	<!-- Brand icon area end -->
 
 	<!-- appointment start area -->
-	<section id="appointment_area">
+	<!-- <section id="appointment_area">
 		<div class="container">
 			<div class="row">
 				<div class="appointment text-center">
@@ -366,8 +366,8 @@
 					<h2>Dejanos tu consulta y te contactamos a la brevedad<br/><b>Si tu consulta es urgente llamanos o escribinos por Whatsapp.</b></h2>
 				</div>
 				<div class="col-lg-12 col-md-12 text-center">
-					<div class="from_area text-center">
-            <form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-JnuPyfFhSxp1qj51iCXUryvHPW1N4gyBIHEv4w/exec">
+					<div class="from_area text-center"> -->
+            <!-- <form class="gform" method="POST" action="https://script.google.com/macros/s/AKfycbz-JnuPyfFhSxp1qj51iCXUryvHPW1N4gyBIHEv4w/exec">
               <div class="form-inputs">
                 <input name="Nombre" type="text" placeholder="Nombre" class="form-one"/>
                 <input name="Email" type="text" placeholder="Email" class="form-one"/>
@@ -454,14 +454,14 @@
               <button class="btn btn-info hvr-bounce-to-right send">ENVIAR</button>
               <div style="display:none" class="thankyou_message">
                 <!-- You can customize the thankyou message by editing the code below -->
-                <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
+                <!-- <p><em>Gracias</em> por contactarnos! Nos pondremos en contacto con vos pronto!</p>
               </div>
-            </form>
-					</div>
+            </form> --> 
+					<!-- </div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- appointment end area -->
 
 	<!---footer start area -->
