FIXED ENVIANOS TU CONSULTA

--- a/inyeccion-electronica.html
+++ b/inyeccion-electronica.html
@@ -133,8 +133,8 @@
 													<li><a href="service-volkswagen.html">VOLKSWAGEN</a></li>
 												  </ul>
 												</li>
-												<a href="#appointment_area" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
-													CONSULTA</button></a>											</ul>
+												<a href="tel:1561760576" class="btn-nav-consulta-a" ><button class="btn-nav-consulta"> ENVIANOS TU
+													CONSULTA</button></a>										</ul>
 										</div>
 									</div>
 								</div>
@@ -654,6 +654,7 @@
 	<!-- my js -->
 	<script src="js/main.js"></script>
 	<script src="extra.js"></script>
+    <script src="manteinance.js"></script>
 
   <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
 </body>
