--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
     <!-- my js -->
     <script src="js/main.js"></script>
     <script src="extra.js"></script>
+    <script src="manteinance.js"></script>
 
     <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
 </body>
