--- a/index.html
+++ b/index.html
@@ -856,6 +856,7 @@
     <script src="manteinance.js"></script>
 
     <script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
+    <!-- Test github-deploy -->
 </body>
 
 </html>
