bosch service added into slider area

--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
                                     <div class="header_column">
                                         <div class="column_details column_four">
                                             <div class="header_social">
-                                                <a href="https://www.facebook.com/Reproinyeccion/"><img
+                                                <a style="margin-right: 40px;" href="https://www.facebook.com/Reproinyeccion/"><img
                                                         src="img/home-v1/facebook-repro.png" alt="" /></a>
                                                 <a href="https://www.instagram.com/reproinyeccionelectronica/?hl=es-la"><img
                                                         src="img/home-v1/instagram-repro.png" alt="" /></a>
+                                                        <div><img class="bosch-service-logo" src="/img/bosch-service.jpeg"/></div>
+                                                        
                                             </div>
                                         </div>
                                     </div>
@@ -189,6 +191,7 @@
 
     <!-- introduce  slider area -->
     <div id="contact">
+
         <img src="https://d35pk2t3v0rl2w.cloudfront.net/hbrrdozyj/image/upload/v1/whatsapp-logo_tyn8iu.svg" alt="">
     </div>
     <section class="rev_slider_wrapper construct-banner-wrapper">
@@ -225,8 +228,13 @@
                                 <img src="./img/payments/amex-logo.png" alt="">
                                 <img src="./img/payments/mastercard-logo.png" alt="">
                                 <img src="./img/payments/mercado-pago.png" alt="">
+
                             </div>
+                            
+                            <div class="bosch-service"><img src="/img/bosch-service-123.jpeg" alt=""></div> 
+
                         </div>
+
                     </div>
                 </li>
                 <li data-transition="fade">
@@ -260,14 +268,20 @@
                                 <img src="./img/payments/amex-logo.png" alt="">
                                 <img src="./img/payments/mastercard-logo.png" alt="">
                                 <img src="./img/payments/mercado-pago.png" alt="">
+
                             </div>
+                            <div class="bosch-service"><img class="" src="/img/bosch-service-123.jpeg" alt=""></div> 
+
                         </div>
+
                     </div>
                 </li>
             </ul>
         </div>
     </section>
     <!-- end  slider area -->
+    <div class="bosch-service-logo-responsive" style="display: none;"><img style="width: max-content; margin: 20px 29px 14px 0;" class="bosch-service-logo" src="/img/bosch-service-123.jpeg"/></div>
+
     <!-- llamanos ahora start area -->
     <section id="porque_area">
         <div class="container">
@@ -720,6 +734,7 @@
                             <a href="https://www.instagram.com/reproinyeccionelectronica/?hl=es-la"><img
                                     src="img/home-v1/instagram-repro.png" alt="" /></a>
                         </div>
+                        <img style="max-width: 54%; margin-top: 20px;" src="/img/bosch-service.jpeg" alt="">
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer_spacing">
                         <div class="column_title">
