--- a/mecanica-integral.html
+++ b/mecanica-integral.html
@@ -96,12 +96,16 @@
 
 									</div>
 									<div class="header_column">
-										<div class="column_details column_four">
-											<div class="header_social">
-												<a href="https://www.facebook.com/Reproinyeccion/"><img src="img/home-v1/facebook-repro.png" alt="" /></a>
-												<a href="https://www.instagram.com/reproinyeccionelectronica/?hl=es-la"><img src="img/home-v1/instagram-repro.png" alt="" /></a>
-											</div>
-										</div>
+									 <div class="column_details column_four">
+                                            <div class="header_social">
+                                                <a style="margin-right: 40px;" href="https://www.facebook.com/Reproinyeccion/"><img
+                                                        src="img/home-v1/facebook-repro.png" alt="" /></a>
+                                                <a href="https://www.instagram.com/reproinyeccionelectronica/?hl=es-la"><img
+                                                        src="img/home-v1/instagram-repro.png" alt="" /></a>
+                                                        <div><img class="bosch-service-logo" src="/img/bosch-service.jpeg"/></div>
+                                                        
+                                            </div>
+                                        </div>
 									</div>
 								</div>
 							</div>
@@ -494,6 +498,8 @@
 							<a href="https://www.facebook.com/Reproinyeccion/"><img src="img/home-v1/facebook-repro.png" alt="" /></a>
 							<a href="https://www.instagram.com/reproinyeccionelectronica/?hl=es-la"><img src="img/home-v1/instagram-repro.png" alt="" /></a>
 						</div>
+						<img style="max-width: 54%; margin-top: 20px;" src="/img/bosch-service.jpeg" alt="">
+
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 footer_spacing">
 						<div class="column_title">
