--- a/service-volkswagen.html
+++ b/service-volkswagen.html
@@ -1,24 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<!-- Google Tag Manager -->
-	<script>
-	    (function (w, d, s, l, i) {
-		w[l] = w[l] || [];
-		w[l].push({
-		    'gtm.start': new Date().getTime(),
-		    event: 'gtm.js'
-		});
-		var f = d.getElementsByTagName(s)[0],
-		    j = d.createElement(s),
-		    dl = l != 'dataLayer' ? '&l=' + l : '';
-		j.async = true;
-		j.src =
-		    'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-		f.parentNode.insertBefore(j, f);
-	    })(window, document, 'script', 'dataLayer', 'GTM-MGTTPR7');
-	</script>
-	<!-- End Google Tag Manager -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5N9KJH4');</script>
+<!-- End Google Tag Manager -->
 	<meta charset="UTF-8">
   <title>Taller Mecánico Repro - Servicios de mecánica integral 011 4932-5951 // 15-61760576</title>
   <meta name="description" content="Taller mecánico REPRO ubicado en la Ciudad de Buenos Aires con más de 20 años de experiencia y servicio en el rubro de la mecánica automotriz. Mecánica Integral, Inyección electrónica, mantenimiento preventivo, gestión de seguros y coberturas. ¡Conocenos!"/>
@@ -48,10 +37,10 @@
 	<link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MGTTPR7" height="0" width="0"
-		style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N9KJH4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 	<!-- start preloader -->
 	<div class="preloaderbox"></div>
